--- a/autoProcess.ini
+++ b/autoProcess.ini
@@ -1,11 +1,11 @@
 [SickBeard]
-host=localhost
-port=8081
+host=
+port=
 username=
 password=
 web_root=
 ssl=0
-api_key=c3795d3422d2f3cb19ab1c4440e0c97e
+api_key=
 
 [NzbDrone]
 host=localhost
@@ -17,33 +17,47 @@ api_key=
 [MP4]
 ffmpeg=/root/bin/ffmpeg
 ffprobe=/root/bin/ffprobe
-output_directory=
-copy_to=
-move_to=
-output_extension=mp4
-output_format=mp4
-delete_original=True
-relocate_moov=True
-audio-codec=ac3
-video-codec=h264,x264
-ios-audio=True
-max-audio-channels=
-audio-language=
-audio-default-language=
-audio-channel-bitrate=
-subtitle-language=
-subtitle-default-language=
-fullpathguess=True
-convert-mp4=False
-tagfile=True
-download-artwork=True
-download-subs=False
-embed-subs=True
-sub-providers=addic7ed,podnapisi,thesubdb,opensubtitles
+threads = auto
+output_directory = 
+copy_to =
+move_to = /storage
+output_extension = mp4
+output_format = mp4
+delete_original = True
+relocate_moov = True
+video-codec = h264,x264
+video-bitrate =
+video-max-width =
+h264-max-level =
+use-qsv-decoder-with-encoder = True
+ios-audio = True
+ios-first-track-only = False
+ios-audio-filter =
+max-audio-channels =
+audio-codec = ac3
+audio-language =
+audio-default-language =
+audio-channel-bitrate =
+audio-filter =
+subtitle-codec = mov_text
+subtitle-language =
+subtitle-default-language =
+subtitle-encoding =
+fullpathguess = True
+convert-mp4 = False
+tagfile = True
+tag-language = en
+download-artwork = Poster
+download-subs = False
+embed-subs = True
+sub-providers = addic7ed,podnapisi,thesubdb,opensubtitles
+permissions = 0777
+post-process = False
+pix-fmt =
 
 [CouchPotato]
-host = localhost
-port = 5050
+host = 
+port = 
 username = 
 password =
 web_root =
