--- a/autoProcess.ini
+++ b/autoProcess.ini
@@ -8,8 +8,8 @@ ssl=0
 api_key=
 
 [NzbDrone]
-host=localhost
-port=8082
+host=
+port=
 web_root=
 ssl=0
 api_key=
@@ -17,7 +17,7 @@ api_key=
 [MP4]
 ffmpeg=/root/bin/ffmpeg
 ffprobe=/root/bin/ffprobe
-threads = auto
+threads = 24
 output_directory = 
 copy_to =
 move_to = /storage
